# opentelemetry-langchain-instrumentation-v2

./: README.md  pyproject.toml
src/: __init__.py  callback_handler.py  span_attributes.py
src/opentelemetry/instrumentation/langchain_v2/: __init__.py  aws_auth_session.py  callback_handler.py  span_attributes.py  utils.py
tests/: test_callback_handler.py
