[project]
name = "otel-aws-langchain-instrumentation-v2"
version - "0.1.0"
description = "SigV4 authenticated requests.Session for exporting OTel tracing for langchain to AWS OTLP endpoints"
authors = [{name = "Eric", email = "ehrican@amazon.com"}, {name = "Michael", email = "yiyuanh@amazon.com"}, {name = "Eric", email = "zhaez@amazon.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"

dependencies = [
    *fill in*
]

[project.urls]

[build-system]